# xmosdfu

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile.OSX64  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  xmosdfu.sln  xmosdfu.vcxproj  xmosdfu.vcxproj.filters
libusb/OSX64/: libusb.h
src/: xmosdfu.cpp
windows/: null  testdfu.bat
xmosdfu/: .gitignore  CMakeLists.txt  Makefile.Linux32  Makefile.Linux64  Makefile.OSX32  Makefile.Pi  Makefile.Win32  README.md  testdfu.sh  xmosdfu.cpp
